# NeSy-Core

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  master_prompt.md  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  release.yml
configs/: default.yaml  edge.yaml  legal.yaml  medical.yaml
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: NeSy Core Architecture Spec.docx  architecture.md  index.md  quickstart.md  release_contract.md
docs/api_reference/: metacognition.md  nesy_model.md  symbolic_engine.md
docs/guides/: adding_rules.md  custom_backbone.md  edge_deployment.md
examples/: basic_reasoning.py  continual_learning.py  edge_deployment.py  medical_demo.py  medical_diagnosis.py  shadow_demo.py
examples/notebooks/: 01_quickstart.ipynb  02_symbolic_rules.ipynb  03_metacognition.ipynb
nesy/: __init__.py  version.py
nesy/api/: __init__.py  context.py  decorators.py  nesy_model.py  pipeline.py
nesy/continual/: __init__.py  ewc.py  learner.py  memory_buffer.py  replay.py  scheduler.py  symbolic_anchor.py
nesy/core/: __init__.py  config.py  exceptions.py  registry.py  types.py  validators.py
nesy/deployment/: __init__.py  exporter.py  lite.py  npu.py  optimizer.py
nesy/evaluation/: __init__.py  evaluator.py  metrics.py
nesy/integrations/: __init__.py  huggingface.py  langchain.py  openai.py  pytorch_lightning.py
nesy/metacognition/: __init__.py  boundary.py  calibration.py  confidence.py  doubt.py  fingerprint.py  monitor.py  shadow.py  trace.py
nesy/neural/: __init__.py  base.py  bridge.py  grounding.py  loss.py  nsil.py
nesy/nsi/: __init__.py  concept_graph.py  graph_builder.py  path_finder.py
nesy/symbolic/: __init__.py  betti.py  engine.py  logic.py  normalizer.py  prover.py  rules.py  solver.py  unsat_explanation.py
scripts/: build_concept_graph.py  evaluate_benchmarks.py  export_model.py  generate_docs.py  reason.py  serve.py  verify_release.ps1
tests/: conftest.py
tests/benchmarks/: test_benchmarks.py  test_inference_speed.py  test_memory_usage.py  test_npu_latency.py
tests/integration/: test_continual_neural.py  test_huggingface.py  test_pipeline.py  test_server.py
tests/unit/: test_all.py  test_api_hardening.py  test_betti_full.py  test_confidence.py  test_continual.py  test_evaluation.py  test_exporter.py  test_fingerprint.py  test_grounding.py  test_integrations.py  test_logic.py  test_low_coverage.py  test_metacognition.py  (+10 more)
(+10 files in other folders)
