[metadata]
name = nesy-core

# ── flake8 ────────────────────────────────────────────────────────────────
[flake8]
max-line-length = 100
extend-ignore = E203,W503
per-file-ignores =
    __init__.py:F401
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    .venv

# ── mypy ──────────────────────────────────────────────────────────────────
[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
disallow_untyped_defs = False
check_untyped_defs = True
no_implicit_optional = True

[mypy-tests.*]
disallow_untyped_defs = False

# ── tool:pytest ───────────────────────────────────────────────────────────
[tool:pytest]
testpaths = tests
addopts = --tb=short -q

# ── isort ─────────────────────────────────────────────────────────────────
[isort]
profile = black
line_length = 100
known_first_party = nesy
